# agentcore-omnisearch-agent

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
apps/aws_knowledge_agent/: .bedrock_agentcore.yaml  main.py  pyproject.toml
apps/aws_knowledge_agent/.bedrock_agentcore/aws_knowledge_agent/: Dockerfile
apps/enduser_agent/: main.py  pyproject.toml
apps/omnisearch_agent/: main.py  pyproject.toml
apps/omnisearch_mcp/: main.py  pyproject.toml
apps/omnisearch_mcp/src/: aws_knowledge_agent.py  microsoft_knowledge_agent.py
src/: main.py
